--- a/code/Cargo.toml
+++ b/code/Cargo.toml
@@ -43,6 +43,7 @@ members = [
   "parachain/runtime/composable-wasm",
   "utils/common",
   "utils/collator-sidecar",
+  "utils/price-feed"
 ]
 resolver = "2"
 
